# bdfd-ai-bot

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: main.rs
src/core/: app_config.rs  mod.rs  network_module.rs
src/data/: mod.rs
src/data/ai/: ai_repository.rs  mod.rs
src/data/ai/prompts/: first_message_prompt.txt
src/domain/: mod.rs
src/domain/ai/: mod.rs
src/domain/ai/use_cases/: generate_first_message_help_use_case.rs  mod.rs
src/domain/use_cases/: get_app_config_use_case.rs  get_discord_client_use_case.rs  mod.rs
src/infrastructure/: discord_bot.rs  mod.rs
src/infrastructure/data/: ai_generated_message_disclaimer.txt
