[package]
name = "bdfd_ai_mod"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
openai = "1.0.0-alpha.8"
serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
shaku = "0.6.1"
tokio = { version = "1.27.0", features = ["full"] }
