[package]
name = "bdfd_ai_mod"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
openai = { version = "1.0.0-alpha.14", features = ["rustls"] }
serenity = { version = "0.11.7", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
shaku = "0.6.1"
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.21"
flexi_logger = "0.28.5"
